# py-csv2cpp

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
csv2cpp/: __main__.py  binary.py  binary_array.py  member.py
tests/: CMakeLists.txt  binary_array.h  csv.h  test_csv2cpp.cpp
tests/csv/: basic.csv  enum.csv  fix_id.csv  no_label.csv  sprite.csv
